--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                                         <div class="art-post-description">
                                                             <h5 class="mb-15">Calculadora JS</h5>
                                                             <div class="mb-15">Una calculadora funcional completamente con JavaScript</div>
-                                                            <a href="https://github.com/joaojv90/calculator_js" target="_blank" data-no-swup class="art-link art-color-link art-w-chevron">Read more</a>
+                                                            <a href="https://joaojv90.github.io/calculator_js/" target="_blank" data-no-swup class="art-link art-color-link art-w-chevron">Read more</a>
                                                         </div>
                                                     </div>
                                                 </div>
