--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
     <link rel="stylesheet" href="css/plugins/fancybox.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>CyberTools</title>
+    <title>Joao Jaramillo | Portfolio</title>
 </head>
 
 <body>
