--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="google-site-verification" content="c3GjyeMutZg3hSgCGa3KJS-xVgTzSejirt6YUVuvKGU" />
     <meta name="theme-color" content="#2B2B35">
-    <link rel="icon" type="image/x-icon" href="img/logo.ico">
+    <link rel="icon" type="image/x-icon" href="img/logo_new.ico">
     <link rel="stylesheet" href="css/plugins/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/plugins/swiper.min.css">
