change in domain of audioparts

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                                                         <div class="art-post-description">
                                                             <h5 class="mb-15">AudioParts Electronics</h5>
                                                             <div class="mb-15">Pagina para negocio de venta de repuestos desarrollada en Django</div>
-                                                            <a href="https://www.audioparts.com.ec" target="_blank" data-no-swup class="art-link art-color-link art-w-chevron">Visitar sitio</a>
+                                                            <a href="https://www.audiopartselectronics.com" target="_blank" data-no-swup class="art-link art-color-link art-w-chevron">Visitar sitio</a>
                                                         </div>
                                                     </div>
                                                 </div>
