changes in principal view

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <div class="art-hard-skills p-30-15">
                                 <div class="art-hard-skills-item">
                                     <div class="art-skill-heading">
-                                        <h6>html</h6>
+                                        <h6>Django</h6>
                                     </div>
                                     <div class="art-line-progress">
                                         <div id="lineprog1"></div>
@@ -95,7 +95,7 @@
                                 </div>
                                 <div class="art-hard-skills-item">
                                     <div class="art-skill-heading">
-                                        <h6>CSS</h6>
+                                        <h6>React</h6>
                                     </div>
                                     <div class="art-line-progress">
                                         <div id="lineprog2"></div>
@@ -103,7 +103,7 @@
                                 </div>
                                 <div class="art-hard-skills-item">
                                     <div class="art-skill-heading">
-                                        <h6>Js - TypeScript</h6>
+                                        <h6>JS</h6>
                                     </div>
                                     <div class="art-line-progress">
                                         <div id="lineprog3"></div>
@@ -128,8 +128,8 @@
                             </div>
                             <div class="art-ls-divider"></div>
                             <ul class="art-knowledge-list p-15-0">
-                                <li>Bootstrap, Django, Angular</li>
-                                <li>React, Docker, Apache</li>
+                                <li>Bootstrap, HTML, CSS</li>
+                                <li>Angular, Docker, Apache</li>
                                 <li>MySQL, MariaDB, Postgres</li>
                                 <li>MongoDB, SQL Server</li>
                             </ul>
